<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.openthread.commissioner.service.CommissionerActivity">

  <TextView
      android:id="@+id/title_text"
      style="@style/title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/scan_device"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <io.openthread.commissioner.service.CameraSourceView
      android:id="@+id/camera_view"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_marginTop="4dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintBottom_toTopOf="@+id/scan_instruction_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title_text"></io.openthread.commissioner.service.CameraSourceView>
  <Button
      android:id="@+id/cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:text="@string/cancel"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/scan_instruction_text"
      style="@style/info_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="128dp"
      android:text="@string/scan_instruction"
      app:layout_constraintBottom_toTopOf="@+id/cancel_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
